# wbuff

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
lib/: CMakeLists.txt
lib/include/wbuffer/: buffer.hpp
lib/src/: CMakeLists.txt
lib/src/buffer/: CMakeLists.txt  constructors.cpp  insert.cpp  operators.cpp  simple_op.cpp  utils.cpp
lib/src/buffer/buffer/: CMakeLists.txt  constructors.cpp  insert.cpp  operators.cpp  simple_op.cpp  utils.cpp
lib/src/buffer/iterator/: CMakeLists.txt  constructors.cpp  operators.cpp
lib/src/buffer/slice/: CMakeLists.txt  constructors.cpp  operators.cpp  simple_op.cpp  utils.cpp
tests/: CMakeLists.txt
tests/cases/: base_buffer.cpp  extended.cpp
